Extract event anonymous inner classes from webhook processor. (#966)
Move test to JUnit5 and add processor unit test
Add unit test for hook processor when process pull request. Consider to add other events for tag, new commit and so on